Fix spacing and remove 1 css fule after validate

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,9 +81,8 @@ footer,
   color: var(--decoration2);
   background-color: var(--irish-green);
   line-height: 2;
-
-  top:50;
 }
+
 #flash-msg-icon {
   color: var(--decoration2);
   padding-right: 5px;
